--- a/DeeStudio/projects.html
+++ b/DeeStudio/projects.html
@@ -120,7 +120,7 @@
   <div class="wrap">
     <header>
       <h1 class="glitch" data-text="Our Projects">Our Projects</h1>
-      <a class="back" href="deestudio_site.html">← Back</a>
+      <a class="back" href="index.html">← Back</a>
     </header>
 
     <div class="hero-slab">
@@ -181,3 +181,4 @@
   </script>
 </body>
 </html>
+
