--- a/DeeStudio/index.html
+++ b/DeeStudio/index.html
@@ -240,7 +240,7 @@
 
   <section id="contact" class="contact">
     <h2>Contact Us</h2>
-    <p>Email: <a href="mailto:hello@deestudio.com" style="color:#9ecfff">hello@deestudio.com</a></p>
+    <p>Email: <a href="mailto:sdeepakdeepak57@gmail.com" style="color:#9ecfff">hello@deestudio.com</a></p>
     
   </section>
 
