--- a/DeeStudio/index.html
+++ b/DeeStudio/index.html
@@ -201,7 +201,7 @@
     </div>
 
     <ul class="nav-links" id="navLinks">
-      <li><a href="deestudio_site.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
       <li><a href="projects.html">Projects</a></li>
       <li><a href="#contact">Contact</a></li>
     </ul>
