--- a/DeeStudio/index.html
+++ b/DeeStudio/index.html
@@ -227,8 +227,8 @@
         <div class="project-desc">Finance & Services Platform</div>
       </div>
       <div class="project" role="button" tabindex="0" data-url="#">
-        <div class="project-title">Ana (Archive)</div>
-        <div class="project-desc">Our first AI experiment 🤖</div>
+        <div class="project-title">PerlynBeauty (Archive)</div>
+        <div class="project-desc">Fashion E-commerce Experience</div>
       </div>
     </div>
   </section>
