--- a/DeeStudio/index.html
+++ b/DeeStudio/index.html
@@ -226,8 +226,8 @@
         <div class="project-title">L2D Finserv</div>
         <div class="project-desc">Finance & Services Platform</div>
       </div>
-      <div class="project" role="button" tabindex="0" data-url="#">
-        <div class="project-title">PerlynBeauty (Archive)</div>
+      <div class="project" role="button" tabindex="0" data-url="https://www.perlynbeauty.co">
+        <div class="project-title">PerlynBeauty</div>
         <div class="project-desc">Fashion E-commerce Experience</div>
       </div>
     </div>
