--- a/DeeStudio/projects.html
+++ b/DeeStudio/projects.html
@@ -142,6 +142,7 @@
       { id:1, title:'Princess Collection', desc:'Fashion e-commerce — responsive catalogue', tags:['web'], url:'https://www.princesscollection.it.com' },
       { id:2, title:'L2D Finserv', desc:'Finance & services — corporate site', tags:['web'], url:'https://www.l2dfinserv.it.com' },
       { id:3, title:'DeeCryptor', desc:'Secure your messages with encrypted PNGs', tags:['tool'], url:'https://deecryptor.onrender.com' }
+      { id:4, title:'PerlynBeauty', desc:'Fashion e-commerce — responsive catalogue', tags:['web'], url:'https://perlynbeauty.co' }
     ];
 
     const grid = document.getElementById('projectsGrid');
@@ -181,4 +182,5 @@
   </script>
 </body>
 </html>
+
 
